[project]
name = "mel-band-roformer-vocal-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beartype==0.14.1",
    "einops==0.6.1",
    "huggingface-hub[cli,hf-transfer]>=0.31.1",
    "librosa>=0.11.0",
    "ml-collections>=1.1.0",
    "numpy>=2.2.5",
    "omegaconf==2.2.3",
    "pandas>=2.2.3",
    "rotary-embedding-torch==0.3.5",
    "segmentation-models-pytorch==0.3.3",
    "soundfile>=0.13.1",
    "timm==0.9.2",
    "torch>=2.0.1",
    "tqdm>=4.67.1",
]
